SF Primes/src/objects/ADP_Default_Team__c.object
<CustomObject>
    <description>ADP Default Team used for account or territory reallignment purposes.</description>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_DOS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Key_DOS</description>
        <label>Key_DOS</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ADP_Default_Teams1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key_Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ADP_Default_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration_ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>ARG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heavy Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoffman Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Truck Dealers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIADA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PFW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>ADP Default Team</label>
    <listViews>
        <fullName>All_Teams</fullName>
        <columns>NAME</columns>
        <columns>Key_Rep__c</columns>
        <columns>Key_DOS__c</columns>
        <columns>Region__c</columns>
        <columns>Inactive__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Teams</label>
    </listViews>
    <nameField>
        <label>Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ADP Default Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>